# node-xml2js

./: .gitignore  .ocamlformat  .travis.yml  CONTRIBUTING.md  Cakefile  LICENSE  README.md  bower.json  dune-project  index.js  node-xml2js.tgz  package-lock.json  package.json  xml2js-0.1.12.tgz  xml2js.opam
.github/workflows/: tests.yml
documentary/: 1-description.md  2-installation.md  5-updating.md  6-dev.md  7-support.md  index.md
documentary/3-usage/: 1-shoot-and-forget.md  2-simple-as-pie.md  3-multiple.md  4-json.md  5-displaying.md  6-xml.md  7-processing.md  index.md
documentary/4-options/: 1-builder.md  index.md
example/: foo.xml  index.coffee  index.js  simple.coffee  simple.js  xml-attributes.js  xml-namespace.js  xml-nondefault.js  xml.js
lib/: bom.js  builder.js  defaults.js  index.js  parser.js  processors.js  util.js  xml2js.js
src/: bom.coffee  bom.js  builder.coffee  builder.js  defaults.coffee  defaults.js  dune  parser.coffee  parser.js  parser.ml  processors.coffee  processors.js  xml2js.coffee  xml2js.js  xml2js.ml
test/: bom.test.coffee  bom.test.js  builder.explicit.test.coffee  builder.test.coffee  builder.test.js  dune  parser.test.coffee  parser.test.js  processors.test.coffee  processors.test.js  test.ml  test_parser.ml  test_parser.mli  xml2js.test.coffee  xml2js.test.js
test/fixtures/: build_sample.xml  sample.xml
